# PPNN

./: .gitignore  Cargo.toml  README.md  notes.md
scripts/: package.json
scripts/lib/: price_data_from_csv.js
src/: cost_function.rs  image_data.rs  image_recognition_scenarios.rs  main.rs  mnist_training_data.rs  network_initializer.rs  price_data.rs  price_prediction_scenarios.rs  sgd_network.rs  sigmoid.rs
